check import notebook, try adding custom stat using mymodule.py

--- a/jupyter_notebooks/check_imports_nb.ipynb
+++ b/jupyter_notebooks/check_imports_nb.ipynb
@@ -2,20 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a55030df",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "octave not found, please see README\n",
-      "Octave not available: octave not found, please see README\n",
-      "Starting JVM with java class /home/hpj22/Documents/stats_for_point_clouds/py-spoc/pyspoc/lib/jidt/infodynamics.jar.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pyspoc"
    ]
@@ -39,16 +29,7 @@
    "execution_count": null,
    "id": "a17eec86",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/hpj22/miniconda3/envs/pyspoc_env/bin/python\n",
-      "['/home/hpj22/miniconda3/envs/pyspoc_env/lib/python312.zip', '/home/hpj22/miniconda3/envs/pyspoc_env/lib/python3.12', '/home/hpj22/miniconda3/envs/pyspoc_env/lib/python3.12/lib-dynload', '', '/home/hpj22/miniconda3/envs/pyspoc_env/lib/python3.12/site-packages', '/home/hpj22/Documents/stats_for_point_clouds/py-spoc/pyspoc']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## check if pyspoc is in path\n",
     "import sys\n",
@@ -78,18 +59,7 @@
    "execution_count": null,
    "id": "96590f49",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "octave not found, please see README\n",
-      "Octave not available: octave not found, please see README\n",
-      "Starting JVM with java class /home/hpj22/Documents/stats_for_point_clouds/py-spoc/pyspoc/lib/jidt/infodynamics.jar.\n",
-      "<module 'pyspoc' from '/home/hpj22/Documents/stats_for_point_clouds/py-spoc/pyspoc/__init__.py'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# backup check for import pyspoc\n",
     "\n",
@@ -113,6 +83,142 @@
    "outputs": [],
    "source": [
     "# import pyspoc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed5ce70e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import other helper libraries\n",
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c4118f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# generate a random dataframe\n",
+    "df = pd.DataFrame(np.random.randint(0,100,size=(100, 4)), columns=list('ABCD'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d5f7f6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a simple YAML config for pyss\n",
+    "\n",
+    "# we first configure the 'Statistics' we want to use\n",
+    "# in this eg, we use the Covariance and the KendallTau correlation coefficient\n",
+    "\n",
+    "# we then configure the 'Reducers' we want to use\n",
+    "# in this eg, we use the SingularValues and the Determinant\n",
+    "\n",
+    "# for each Reducer function, we determine which Statistic to apply it to reduce\n",
+    "\n",
+    "yaml_str_stat_reduce = \"\"\"\n",
+    "Statistics:\n",
+    "  pyspoc.statistics.basic:\n",
+    "    # Covariance\n",
+    "    Covariance:\n",
+    "      schemes:\n",
+    "        cov:\n",
+    "          estimator: EmpiricalCovariance\n",
+    "\n",
+    "    # Kendall Tau correlation coefficient\n",
+    "    KendallTau:\n",
+    "      schemes:\n",
+    "        sq:\n",
+    "          squared: True\n",
+    "\n",
+    "        standard:\n",
+    "          squared: False\n",
+    "\n",
+    "Reducers:\n",
+    "  pyspoc.reducers.basic:\n",
+    "    SingularValues:\n",
+    "      Statistics:\n",
+    "        - pyspoc.statistics.basic.Covariance.cov\n",
+    "        - pyspoc.statistics.basic.KendallTau.sq\n",
+    "        - pyspoc.statistics.basic.KendallTau.standard\n",
+    "      schemes:\n",
+    "        three:\n",
+    "          num_values: 3\n",
+    "\n",
+    "    Determinant:\n",
+    "      Statistics:\n",
+    "        - pyspoc.statistics.basic.Covariance.cov\n",
+    "      schemes:\n",
+    "        scaled:\n",
+    "          scaled: True\n",
+    "\n",
+    "        non-scaled:\n",
+    "          scaled: False\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cfd991ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# copy the randomly generated dataframe\n",
+    "my_dataset = df.copy()\n",
+    "\n",
+    "# set a name for the config\n",
+    "my_config_name = \"test_config_yml\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32df16ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a Config class object\n",
+    "cfg = Config.from_yaml(my_config_name, yaml_str_stat_reduce)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44d62b80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calc = Calculator(my_dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22416dfa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calc.compute(cfg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0caf4777",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calc.results.T"
    ]
   }
  ],
