--- a/jupyter_notebooks/pyspoc_trials/check_imports_nb.ipynb
+++ b/jupyter_notebooks/pyspoc_trials/check_imports_nb.ipynb
@@ -17,6 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# TODO CHECK THESE IMPORT FLAGS AT SOME POINT\n",
     "# import pyyaml - flag\n",
     "# import jpype1 - flag\n",
     "# import cdt - flag\n",
