modified:   jupyter_notebooks/synthetic_data_simulations/blob_distCurve_metrics.ipynb 	modified:   jupyter_notebooks/synthetic_data_simulations/sklearn_synthetic_data_eda.ipynb

--- a/jupyter_notebooks/synthetic_data_simulations/sklearn_synthetic_data_eda.ipynb
+++ b/jupyter_notebooks/synthetic_data_simulations/sklearn_synthetic_data_eda.ipynb
@@ -41,45 +41,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "6330dc40",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "seed = 42"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "eeb2f1a3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# noisy_circles = datasets.make_circles(n_samples=n_samples, factor=0.5, noise=0.05, random_state=seed)\n",
+    "mean = np.zeros(num_feat)\n",
     "\n",
-    "# noisy_moons = datasets.make_moons(n_samples=(n_samples,3), noise=0.05, random_state=seed)\n",
+    "cov = [[1, 0], [0, 1]]\n",
     "\n",
-    "# biclusters, r, c = datasets.make_biclusters(\n",
-    "#     shape=(n_samples, n_features), n_clusters=2, random_state=seed,noise=10\n",
-    "# )\n",
-    "\n",
-    "# # # Anisotropicly distributed data\n",
-    "# X, y = datasets.make_blobs(n_samples=n_samples,n_features=2, random_state=seed)\n",
-    "# transformation = [[0.6, -0.6], [-0.4, 0.8]]\n",
-    "# X_aniso = np.dot(X, transformation)\n",
-    "# aniso = (X_aniso, y)\n"
+    "x = np.random.multivariate_normal(mean, cov, (3, 3))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "fed15733",
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_samples = 1000\n",
-    "n_features = 3\n",
     "\n",
     "gaus_homosk_blobs = datasets.make_blobs(n_samples=n_samples,n_features=n_features, random_state=seed)\n",
     "\n",
