--- a/working_analyses/hjResearch_2025/notebooks/synthetic_data_simulations/sklearn_synthetic_data_eda.ipynb
+++ b/working_analyses/hjResearch_2025/notebooks/synthetic_data_simulations/sklearn_synthetic_data_eda.ipynb
@@ -18,7 +18,18 @@
     "import time\n",
     "import warnings\n",
     "from itertools import cycle, islice\n",
+    "import time\n",
+    "import warnings\n",
+    "from itertools import cycle, islice\n",
     "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import plotly.express as px\n",
+    "\n",
+    "from sklearn import cluster, datasets, mixture\n",
+    "from sklearn.neighbors import kneighbors_graph\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.covariance import EmpiricalCovariance\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import plotly.express as px\n",
