add cov statistic, disable caching in library to work with multiple datasets;

--- a/working_analyses/hjResearch_2025/notebooks/testing_summary_stats/eda_jun2025.ipynb
+++ b/working_analyses/hjResearch_2025/notebooks/testing_summary_stats/eda_jun2025.ipynb
@@ -102,7 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "flat = {f\"{k}_{sk}\": sv for k, v in filename_dict.items() for sk, sv in v.items()}"
+    "flat = {f\"{k}_{sk}\": sv for k, v in fildename_dict.items() for sk, sv in v.items()}"
    ]
   },
   {
